--- a/style.css
+++ b/style.css
@@ -55,6 +55,9 @@
 .color-white {
     color: #FFFFFF;
 }
+.uppercase {
+    text-transform: uppercase;
+}
 html {
     font-size: 20px;
     min-height: 100vh;
@@ -74,7 +77,6 @@ section.hero {
     overflow: hidden;
     padding: 0 3rem 3rem 3rem;
     min-height: 90vh;
-    background-image: url('assets/images/bg-star-1.svg'), url('assets/images/bg-star-2.svg');
     background-repeat: no-repeat;
     background-size: 17.5rem 17.5rem, 15rem, 15rem;
     background-position: 0 -3.5rem, 100% 100%;
@@ -124,7 +126,7 @@ section.hero .bottom .button {
     background-image: url("assets/images/button-bg.png");
     background-size: 100% 100%;
     background-repeat: no-repeat;
-    padding: .75rem 3rem .75rem 3rem;
+    padding: .6rem 2.5rem .6rem 2.5rem;
     border: 10px solid #f8acc7;
     border-radius: 100px;
     height: fit-content;
@@ -140,7 +142,7 @@ section.hero .bottom .button > img {
     height: 2rem;
 }
 section.hero .bottom * {
-    font-size: 1.25rem;
+    font-size: 1.15rem;
 }
 section.hero .bottom {
     display: flex;
@@ -184,7 +186,6 @@ section.hero .bottom > .center {
     display: flex;
     flex-direction: column;
     gap: 2rem;
-    flex: 2;
 }
 section.hero .bottom > .center .text {
     text-align: center;
@@ -195,11 +196,12 @@ section.hero .bottom > .center .text {
 section.hero .bottom > .right {
     display: flex;
     flex-direction: column;
+    align-items: flex-end;
     gap: 1rem;
     align-self: center;
 }
 section.hero .bottom > .right .text {
-    font-size: 1.5rem;
+    font-size: 1.4rem;
     line-height: 104%;
     letter-spacing: 2px;
 }
@@ -208,11 +210,17 @@ section.hero .bottom > .right > .bonus {
     align-items: center;
     gap: .5rem;
 }
-section.hero .right > .bonus img {
+section.hero .right > .inner > div {
+    display: flex;
+    justify-content: flex-end;
+    gap: 1rem;
+}
+section.hero .right .bonus img {
     width: 3rem;
     height: 3rem;
 }
-section.hero .right > .bonus > div {
+section.hero .right .bonus > div {
+    width: fit-content;
     padding: .25rem 1rem;
     height: fit-content;
     background: #F25B92;
@@ -222,4 +230,620 @@ section.hero .right > .bonus > div {
     border-radius: 80px;
     font-size: 1.2rem;
     line-height: 104%;
+}
+section.about {
+    padding: 2rem 3rem 3rem 3rem;
+}
+section.about .offer {
+    border-radius: 24px;
+    border: 2px solid #F25B92;
+    padding: 1rem 3rem 1rem 13%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+section.about .offer > .abs {
+    position: absolute;
+    height: 6rem;
+    transform: rotate(-15deg);
+    left: -5rem;
+    top: calc(50% - 3rem);
+}
+section.about .offer > div {
+    flex: 4;
+}
+section.about .offer > .text {
+    font-size: 1.8rem;
+    padding-right: 1.5rem;
+}
+section.about .offer > .text span {
+    color: #F25B92;
+}
+section.about .offer > .title {
+    flex: 3;
+    display: flex;
+    justify-content: flex-end;
+}
+section.about .offer > .title .text {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    width: fit-content;
+}
+section.about .offer > .title .text span {
+    font-size: 4rem;
+    position: relative;
+}
+section.about .offer > .title .text span:not(.hidden) {
+    padding-top: 1rem;
+}
+section.about .offer > .title .text span.hidden {
+    color: #FFFFFF;
+    font-size: 4rem;
+    z-index: -1;
+}
+section.about .offer > .title .text span > .abs {
+    position: absolute;
+    height: 5rem;
+    width: 10rem;
+    top: 70%;
+    left: 45%;
+    transform: translateX(-50%);
+}
+section.about .offer .line {
+    height: 2px;
+    background: #F25B92;
+    width: 100%;
+    flex: 2;
+}
+section.about {
+    display: flex;
+    flex-direction: column;
+}
+section.about .prize {
+    display: flex;
+    padding-top: 6rem;
+    gap: 1rem;
+}
+section.about .prize .left {
+    flex: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+section.about .prize .left .offer-text {
+    display: flex;
+    flex-direction: column;
+    gap: .5rem;
+}
+section.about .prize .left .offer-text > div {
+    font-size: 2.65rem;
+}
+section.about .prize .left .offer-text > div:last-child {
+    color: #F25B92;
+}
+section.about .prize .right .img {
+    position: relative;
+}
+section.about .prize .right img:not(.abs) {
+    height: 20rem;
+}
+section.about .prize .right img.abs {
+    position: absolute;
+    z-index: 100;
+}
+section.about .prize .right img:nth-child(2) {
+    height: 9rem;
+    width: 5.5rem;
+    top: -5.5rem;
+    left: 2.5rem;
+    transform: rotate(50deg);
+}
+section.about .prize .right img:nth-child(3) {
+    height: 11rem;
+    width: 7rem;
+    top: calc(100% - 10rem);
+    left: -4rem;
+    transform: rotate(80deg);
+}
+section.about .prize .right img:nth-child(4) {
+    height: 16rem;
+    width: 12rem;
+    top: calc(100% - 14rem);
+    left: calc(100% - 9.5rem);
+}
+section.about .prize .left .expert {
+    display: flex;
+    align-items: center;
+    gap: .5rem;
+}
+section.about .prize .left .expert img {
+    border: 3px solid rgba(242, 91, 146, 0.40);
+    width: 11rem;
+    height: 11rem;
+    margin-bottom: 1.5rem;
+}
+section.about .prize .left .expert .text {
+    font-size: 1.25rem;
+    line-height: 120%;
+}
+section.about .grid {
+    padding-top: 4rem;
+    display: flex;
+    width: 100%;
+}
+section.about .grid > div {
+    border: 1px solid #C4C4C4;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+section.about .grid > div:nth-child(2) {
+    border-left: none;
+    border-right: none;
+}
+section.about .grid > div > .text {
+    display: flex;
+    flex-direction: column;
+    padding: .5rem 1rem .5rem .5rem;
+}
+section.about .grid > div > .img {
+    display: flex;
+    align-items: flex-end;
+}
+section.about .grid > div > .img img {
+    border-top: 1px solid #C4C4C4;
+}
+section.about .grid > div:nth-child(2) > .img img {
+    border-bottom: 1px solid #C4C4C4;
+    border-top: none;
+}
+section.about .grid > div:nth-child(2) > .text > img {
+    height: 9rem;
+    width: 9rem;
+    padding-bottom: 1rem;
+}
+section.about .grid > div:first-child > .text > img {
+    transform: scaleX(-1);
+    height: 10rem;
+    width: 10rem;
+}
+section.about .grid > div:last-child > .text > img {
+    height: 8rem;
+    width: 10rem;
+}
+section.about .grid > div > .text > div {
+    font-size: 1rem;
+    padding-left: 1rem;
+}
+section.about .grid > div > .text > div > span {
+    color: #F25B92;
+}
+section.about .grid > div > .img {
+    height: 12.5rem;
+}
+section.about .grid > div > .img > img{
+    width: 100%;
+    height: 100%;
+}
+
+@media screen and (min-width: 2560px) and (max-width: 3840px) {
+    html {
+        font-size: 28px;
+    }
+    section.hero {
+        padding: 0 10rem 5rem 10rem;
+        min-height: auto;
+    }
+    section.hero .title {
+        font-size: calc(60vw / 8);
+        margin-bottom: calc(45vw / 4.4);
+    }
+    section.hero .title .abs {
+        width: 40vw;
+        left: 50%;
+    }
+}
+@media only screen  and (max-width: 2559px) {
+    html {
+        font-size: 24px;
+    }
+    section.hero,
+    section.about{
+        min-height: auto;
+        padding: 0 7rem 5rem 7rem;
+    }
+    section.hero .bottom {
+        margin: auto;
+    }
+    section.hero .title {
+        font-size: calc(100vw / 7);
+        margin-bottom: calc(45vw / 4.4);
+    }
+    section.hero .title .abs {
+        width: 50vw;
+        left: 45%;
+    }
+
+}
+@media only screen and (max-width: 1919px) {
+    html {
+        font-size: 22px;
+    }
+    section.hero,
+    section.about{
+        padding: 0 5rem 5rem 5rem;
+        min-height: auto;
+    }
+    section.hero .title {
+        font-size: calc(100vw / 7);
+        margin-bottom: calc(50vw / 4.4);
+    }
+    section.hero .title .abs {
+        width: 50vw;
+        left: 48%;
+    }
+}
+@media only screen and (max-width: 1650px) {
+    section.hero,
+    section.about{
+        padding: 0 3.8rem 5rem 3.8rem;
+        min-height: auto;
+    }
+}
+@media only screen and (max-width: 1599px) {
+    html {
+        font-size: 20px;
+    }
+    section.hero,
+    section.about {
+        padding: 0 3rem 3rem 3rem;
+    }
+}
+@media only screen and (min-width: 1366px) and (max-width: 1420px) {
+    section.about .prize .left .offer-text > div {
+        font-size: 2.4rem;
+    }
+}
+@media only screen and (max-width: 1365px) {
+    html {
+        font-size: 17px;
+    }
+    section.hero {
+        padding: 0 3rem 8rem 3rem;
+    }
+    section.about .prize .right img:not(.abs) {
+        height: 22rem;
+    }
+}
+@media only screen and (max-width: 1260px) {
+    section.about .prize .right img:not(.abs) {
+        height: 20rem;
+    }
+    section.about .prize .left .offer-text > div {
+        font-size: 2.2rem;
+    }
+    section.about .offer > .text {
+        font-size: 1.7rem;
+    }
+    section.about .offer > .title .text span {
+        font-size: 3.85rem;
+    }
+}
+@media only screen and (max-width: 1100px) {
+    html {
+        font-size: 16px;
+    }
+    section.hero {
+        padding: 0 1.25rem 2rem 1.25rem;
+        min-height: 700px;
+        background-size: 12.5rem 12.5rem, 10rem, 10rem;
+    }
+    section.hero .title {
+        font-size: calc(100vw / 8);
+        margin-bottom: calc(40vw / 4.4);
+    }
+    section.hero .title .abs {
+        width: 55vw;
+        left: 48%;
+    }
+    section.hero .bottom {
+        gap: 1.5rem;
+    }
+    section.hero .bottom .button {
+        padding: .25rem 2rem .25rem 1.5rem;
+        border: 7px solid #f8acc7;
+    }
+    section.hero .bottom > div {
+        gap: 1rem;
+    }
+    section.hero .bottom .left > div:last-child {
+        padding-right: .75rem;
+    }
+    section.about .prize .right img:not(.abs) {
+        height: 20rem;
+    }
+    section.about .offer > .text {
+        font-size: 1.5rem;
+    }
+    section.about .offer > .title .text span {
+        font-size: 3.5rem;
+    }
+}
+@media only screen and (max-width: 1036px) {
+    section.about .prize .right img:not(.abs) {
+        height: 18rem;
+    }
+    section.about .prize .left .offer-text > div {
+        font-size: 2rem;
+    }
+}
+@media only screen and (max-width: 950px) {
+    html {
+        font-size: 14px;
+    }
+    section.hero .bottom .left > div:last-child {
+        padding-right: 1rem;
+    }
+}
+@media only screen and (min-width: 791px) and (max-width: 860px) {
+    section.about .prize .right img:not(.abs) {
+        height: 16rem;
+    }
+    section.about .prize .left .expert img {
+        width: 9rem;
+        height: 9rem;
+    }
+    section.about .grid > div > .img {
+        height: 10.5rem;
+    }
+}
+@media only screen and (max-width: 790px) {
+    section.hero .bottom {
+        flex-direction: column;
+    }
+    section.hero .title {
+        font-size: calc(90vw / 4);
+        margin-bottom: calc(100vw / 3);
+        line-height: 90%;
+    }
+    section.hero .title > div:first-child {
+        line-height: 80%;
+        padding-top: 1rem;
+
+    }
+    section.hero .title .abs {
+        width: 90vw;
+        left: 45%;
+        top: 75%;
+    }
+    section.hero .bottom * {
+        font-size: 1.75rem !important;
+    }
+    section.hero .bottom .button {
+        padding: 1.25rem 3.25rem 1.25rem 3.25rem;
+        border: 10px solid #f8acc7;
+    }
+
+    section.hero .bottom {
+        gap: 2.5rem;
+        align-items: center;
+    }
+
+    section.hero .bottom > div {
+        gap: 1.75rem;
+    }
+    section.hero .bottom > .center {
+        order: 1;
+    }
+    section.hero .bottom > .left {
+        order: 2;
+        width: 80%;
+        gap: 0;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: max-content 1fr;
+        gap: 0;
+        grid-template-areas:
+    "a b"
+    "c c";
+    }
+    section.hero .bottom > .left > div {
+        width: 100%;
+        gap: 1.5rem;
+        padding: 1rem 1rem 1rem 1rem !important;
+    }
+    section.hero .bottom > .left > div .text {
+        font-size: 1.35rem !important;
+    }
+    .a { grid-area: a; }
+    .b { grid-area: b; }
+    .c { grid-area: c; }
+    section.hero .bottom > .left > div br {
+        display: none;
+    }
+    section.hero .bottom > .right {
+        order: 3;
+    }
+    section.hero .bottom .left .dot {
+        width: 1.1rem;
+        height: 1.1rem;
+    }
+    section.hero .bottom .left > div:nth-child(2) {
+        align-self: flex-end;
+    }
+    section.hero .bottom .left > div {
+        padding: 1rem 2.4rem 1rem 1.25rem;
+    }
+    section.hero .bottom > .right .text {
+        font-size: 2.25rem !important;
+    }
+    section.hero .right .bonus img {
+        width: 6rem;
+        height: 6rem;
+    }
+    section.hero .right .bonus > div {
+        padding: .5rem 1.25rem;
+    }
+    section.hero .top .img {
+        width: 6rem;
+        height: 6rem;
+    }
+    section.about .offer {
+        flex-direction: column;
+        width: fit-content;
+        margin: auto;
+        padding: 1rem 2rem 1rem 2rem;
+    }
+    section.about .offer > .text {
+        font-size: 2.5rem;
+        text-align: center;
+        padding-right: 0;
+    }
+    section.about .offer > .abs {
+        position: initial;
+        margin: 1rem 0;
+        height: 8rem;
+    }
+    section.about .offer > .title .text span {
+        font-size: 6rem;
+    }
+    section.about .offer > .title .text span > .abs {
+        height: 10rem;
+        width: 15rem;
+    }
+    section.about .offer > .title .text {
+        margin-bottom: 2rem;
+    }
+    section.about .prize {
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+    section.about .prize .left {
+        align-items: center;
+        margin-top: 1rem;
+    }
+    section.about .prize .left .expert {
+        padding-top: 1.5rem;
+    }
+    section.about .prize .right img:not(.abs) {
+        height: 24rem;
+    }
+    section.about .grid {
+        width: fit-content;
+        flex-direction: column;
+    }
+    section.about .info {
+        display: flex;
+        justify-content: center;
+    }
+    section.about .grid > div > .img {
+        height: 15rem;
+    }
+    section.about .grid > div:nth-child(2) {
+        border-left: 1px solid #f8acc7;
+        border-right: 1px solid #f8acc7;
+        border-top: none;
+        border-bottom: none;
+    }
+    section.about .grid > div:not(:nth-last-child(2)) {
+        flex-direction: column-reverse;
+    }
+}
+@media only screen and (max-width: 600px) {
+    section.hero .bottom > .left {
+        width: 100%;
+    }
+    section.hero .top > div {
+        font-size: 1.2rem;
+    }
+}
+
+@media only screen and (max-width: 540px) {
+    html {
+        font-size: 14px;
+    }
+    section.hero {
+        padding: 0 1rem 1rem 1rem;
+    }
+    section.hero .description .img {
+        width: 5rem;
+        height: 5rem;
+    }
+    section.hero .top > div {
+        font-size: 1rem;
+    }
+    section.hero .top {
+        gap: 1rem;
+    }
+    section.about .prize .right img:not(.abs) {
+        height: 22rem;
+    }
+}
+@media only screen and (max-width: 480px) {
+    html {
+        font-size: 12px;
+    }
+    section.hero .bottom {
+        gap: 3rem;
+    }
+    section.hero .description .img {
+        width: 4rem;
+        height: 4rem;
+    }
+    section.hero .description > div {
+        font-size: 1.1rem;
+    }
+    section.hero .bottom {
+        gap: 1.5rem;
+    }
+    section.hero .top > div {
+        font-size: 1.2rem;
+    }
+    section.hero .top > div:first-child {
+        text-align: end;
+    }
+    section.about .prize .right .img {
+        display: flex;
+        justify-content: center;
+    }
+    section.about .prize .right img:not(.abs) {
+        height: auto;
+        width: 90%;
+    }
+    section.about .prize .left .expert .text {
+        font-size: 1.75rem;
+    }
+    section.about .grid {
+        width: 100%;
+    }
+    section.about .grid > div > .text > div {
+        font-size: 1.35rem;
+        line-height: 120%;
+    }
+}
+@media only screen and (max-width: 420px) {
+
+    section.hero {
+        padding: 0 .5rem 1rem .5rem;
+    }
+
+}
+@media only screen and (max-width: 400px) {
+    html {
+        font-size: 10px;
+    }
+}
+@media only screen and (max-width: 360px) {
+    html {
+        font-size: 10px;
+    }
+    section.hero {
+        min-height: 600px;
+    }
+    section.about .prize .left .offer-text > div {
+        font-size: 1.9rem;
+    }
 }
