--- a/style.css
+++ b/style.css
@@ -81,6 +81,10 @@ section.hero {
     background-size: 17.5rem 17.5rem, 15rem, 15rem;
     background-position: 0 -3.5rem, 100% 100%;
 }
+section.about,
+section.offer {
+    padding: 0 3rem 3rem 3rem;
+}
 section.hero .top {
     display: flex;
     gap: 1.5rem;
@@ -116,7 +120,7 @@ section.hero .title .abs {
     left: 46%;
     transform: translateX(-50%);
 }
-section.hero .bottom .button {
+.button {
     width: fit-content;
     display: flex;
     gap: 1.5rem;
@@ -134,10 +138,10 @@ section.hero .bottom .button {
     z-index: 10000;
     position: relative;
 }
-section.hero .bottom .button > span {
+.button > span {
     color: #FFFFFF;
 }
-section.hero .bottom .button > img {
+.button > img {
     width: 2rem;
     height: 2rem;
 }
@@ -428,7 +432,94 @@ section.about .grid > div > .img > img{
     width: 100%;
     height: 100%;
 }
-
+section.offer {
+    padding: 5rem 3rem 5rem 3rem;
+    background-image: url("assets/images/form-bg.gif");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: 125% 100%;
+    display: flex;
+    position: relative;
+    align-items: center;
+    overflow: hidden;
+}
+section.offer .form {
+    position: relative;
+}
+section.offer .form > .content {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+section.offer .form > .content .action {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    background: #EBEBEB;
+    padding: 2rem;
+}
+section.offer .abs {
+    position: absolute;
+    width: 20rem;
+    height: 16rem;
+    bottom: 0;
+    left: 52%;
+    z-index: 10001;
+    transform: translateX(-50%);
+    overflow: hidden;
+}
+section.offer .abs-2 {
+    position: absolute;
+    width: 20rem;
+    height: 16rem;
+    bottom: -6rem;
+    left: -2rem;
+    z-index: 10001;
+    overflow: hidden;
+}
+section.offer .form > .content .action .title {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+section.offer .form > .content .action .title > div {
+    font-size: 2.5rem;
+    text-align: center;
+    text-transform: uppercase;
+}
+.button {
+    margin:0  5rem;
+}
+section.offer .form .description {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+}
+section.offer .form .description .title {
+    padding: .5rem 3rem;
+    background: #1D1D1D;
+    color: #FFFFFF;
+    width: fit-content;
+    line-height: 120%;
+    font-size: 1.5rem;
+    position: relative;
+}
+section.offer .form .description .title .abs {
+    position: absolute;
+    width: 4.5rem;
+    height: 4.5rem;
+    left: 0;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+section.offer .form .description .text {
+    text-align: center;
+    font-size: 1.2rem;
+}
+section.offer .form img.mobile {
+    display: none;
+}
 @media screen and (min-width: 2560px) and (max-width: 3840px) {
     html {
         font-size: 28px;
@@ -531,6 +622,10 @@ section.about .grid > div > .img > img{
     section.about .offer > .title .text span {
         font-size: 3.85rem;
     }
+    section.offer {
+        padding: 7rem 3rem 7rem 3rem;
+        background-position: 190% 100%;
+    }
 }
 @media only screen and (max-width: 1100px) {
     html {
@@ -552,7 +647,7 @@ section.about .grid > div > .img > img{
     section.hero .bottom {
         gap: 1.5rem;
     }
-    section.hero .bottom .button {
+    .button {
         padding: .25rem 2rem .25rem 1.5rem;
         border: 7px solid #f8acc7;
     }
@@ -571,6 +666,9 @@ section.about .grid > div > .img > img{
     section.about .offer > .title .text span {
         font-size: 3.5rem;
     }
+    section.offer {
+        background-position: 170% 100%;
+    }
 }
 @media only screen and (max-width: 1036px) {
     section.about .prize .right img:not(.abs) {
@@ -578,6 +676,19 @@ section.about .grid > div > .img > img{
     }
     section.about .prize .left .offer-text > div {
         font-size: 2rem;
+    }
+    section.offer {
+        padding: 4rem 3rem 4rem 3rem;
+    }
+    section.offer .abs {
+        position: absolute;
+        width: 20rem;
+        height: 16rem;
+        bottom: -4rem;
+        left: 63%;
+        z-index: 10001;
+        transform: translateX(-50%);
+        overflow: hidden;
     }
 }
 @media only screen and (max-width: 950px) {
@@ -587,6 +698,7 @@ section.about .grid > div > .img > img{
     section.hero .bottom .left > div:last-child {
         padding-right: 1rem;
     }
+
 }
 @media only screen and (min-width: 791px) and (max-width: 860px) {
     section.about .prize .right img:not(.abs) {
@@ -622,7 +734,7 @@ section.about .grid > div > .img > img{
     section.hero .bottom * {
         font-size: 1.75rem !important;
     }
-    section.hero .bottom .button {
+    .button {
         padding: 1.25rem 3.25rem 1.25rem 3.25rem;
         border: 10px solid #f8acc7;
     }
@@ -751,6 +863,31 @@ section.about .grid > div > .img > img{
     section.about .grid > div:not(:nth-last-child(2)) {
         flex-direction: column-reverse;
     }
+    section.offer {
+        background-image: none;
+        padding: 4rem 3rem 0 3rem;
+    }
+    section.offer .form > .content .action {
+        width: fit-content;
+        margin: auto;
+    }
+    section.offer .abs {
+        display: none;
+    }
+    section.offer .abs-2 {
+        width: 30rem;
+        height: 20rem;
+        left: -4rem;
+    }
+    section.offer .form img.mobile {
+        margin-top: -8rem;
+        display: block;
+        width: 100%;
+    }
+    section.offer .button {
+        margin: 0 auto;
+        font-size: 1.25rem;
+    }
 }
 @media only screen and (max-width: 600px) {
     section.hero .bottom > .left {
@@ -758,6 +895,10 @@ section.about .grid > div > .img > img{
     }
     section.hero .top > div {
         font-size: 1.2rem;
+    }
+    section.offer {
+        background-image: none;
+        padding: 4rem 1rem 0 1rem;
     }
 }
 
@@ -823,17 +964,32 @@ section.about .grid > div > .img > img{
         font-size: 1.35rem;
         line-height: 120%;
     }
+    section.offer .form > .content .action {
+        width: 100%;
+    }
+    section.offer .form > .content .action .title > div {
+        font-size: 2.25rem;
+    }
+    section.offer .form > .content .action {
+        padding: 1.25rem;
+    }
 }
 @media only screen and (max-width: 420px) {
 
     section.hero {
         padding: 0 .5rem 1rem .5rem;
     }
-
+    section.offer .form > .content .action .title > div {
+        font-size: 2rem;
+    }
 }
 @media only screen and (max-width: 400px) {
     html {
         font-size: 10px;
+    }
+    section.offer .button {
+        margin: 0 auto;
+        padding: 1rem 2.75rem 1rem 2.75rem;
     }
 }
 @media only screen and (max-width: 360px) {
