--- a/apply/style.css
+++ b/apply/style.css
@@ -1,202 +1,84 @@
-section.hero {
-    min-height: 95vh;
-    max-height: 1280px;
-    background-color: #F25B92;
-    padding-bottom: 4rem;
-    background-image: url("../assets/images/apply-star-1.png"), url("../assets/images/apply-star-2.png");
-    background-repeat: no-repeat;
-    background-size: 10rem 20rem, 7.5rem 30rem;
-    background-position: 0 100%, 100% 25%;
-    overflow: hidden;
-    position: relative;
+@font-face {
+    font-family: 'Fixel Semibold';
+    src: local('Fixel Display SemiBold'), local('Fixel-Display-SemiBold'),
+    url('../assets/fonts/FixelDisplay-SemiBold.woff2') format('woff2'),
+    url('../assets/fonts/FixelDisplay-SemiBold.woff') format('woff'),
+    url('../assets/fonts/FixelDisplay-SemiBold.ttf') format('truetype');
+    font-weight: 600;
+    font-style: normal;
 }
-section.hero > .abs {
-    position: absolute;
-    width: 30rem;
-    height: 20rem;
-    bottom: -7.5rem;
-    left: calc(100% + 19rem);
-    transform: translateX(-100%) rotate(-25deg);
+@font-face {
+    font-family: 'Basenji ExtraLight';
+    src: url('../assets/fonts/basenji-extralight.otf') format('opentype');
+    font-weight: 100;
+    font-style: normal;
 }
-section.hero .top {
-    padding: .8rem 3rem;
-    border-bottom-left-radius: 2.8rem;
-    border-bottom-right-radius: 2.8rem;
-    display: flex;
+@font-face {
+    font-family: 'Basenji Light';
+    src: url('../assets/fonts/basenji-light.otf') format('opentype');
+    font-weight: 300;
+    font-style: normal;
+}
+.basenji-extralight {
+    font-family: 'Basenji ExtraLight', sans-serif;
+}
+.basenji-light {
+    font-family: 'Basenji Light', sans-serif;
+}
+.fixel-semibold {
+    font-family: 'Fixel Semibold', sans-serif;
+}
+html {
+    font-size: 20px;
+    min-height: 100vh;
     background: #FFFFFF;
 }
-section.hero .top > div {
-    display: flex;
-    gap: .5rem;
-    width: 50%;
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    color: #1D1D1D;
+    letter-spacing: 0;
+    line-height: 104%;
+    text-decoration: none;
+    border: none;
 }
-section.hero .top > div:first-child {
-    justify-content: center;
-    border-right: 2px solid rgba(242, 91, 146, 0.2);
-}
-section.hero .top > div:last-child {
-    justify-content: flex-end;
-}
-section.hero .top > div > .img {
-    border: 2px solid #F25B92;
-    border-radius: 50%;
-    height: 3rem;
-    width: 3rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 2rem;
-}
-section.hero .top > div:first-child > .img {
-    padding-top: .4rem;
-    background: #F4F4F4;
-}
-section.hero .top > div > .img > img {
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-}
-section.hero .title {
-    margin-top: 4rem;
-    font-size: calc(100vw / 8);
-    text-align: center;
-    position: relative;
-    margin-bottom: calc(60vw / 4.4);
-}
-section.hero .title .abs {
-    width: 45vw;
-    height: auto;
-    position: absolute;
-    top: 45%;
-    left: 46%;
-    transform: translateX(-50%);
-}
-section.hero .bottom {
-    display: flex;
-    gap: 1rem;
-    justify-content: center;
-    padding-top: 4rem;
-}
-section.hero .bottom > .coupon {
-    padding: 1.5rem 1rem;
-    background-image: url("../assets/images/coupon-bg.png");
+main {
+    padding: 3.5vw 0 2vw 10vw;
+    background-image: url('../assets/images/lips-rotated.svg'), url('../assets/images/pink-star.svg'), url('../assets/images/expert-bg-2.gif');
     background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    width: 25%;
-    min-width: 400px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: .5rem;
-    border-bottom-right-radius: 1.2rem;
-    border-bottom-left-radius: 1.2rem;
+    background-position: -3% 10%, 104% -15%, 110% 105%;
+    background-attachment: fixed;
+    background-size: 15vw 15vw, 20vw 20vw, contain;
 }
-section.hero .bottom > .coupon > div {
-    text-align: center;
-}
-section.hero .bottom > .coupon:first-child > div:first-child {
-    font-size: 1.2rem;
-}
-section.hero .bottom > .coupon:first-child > div:last-child,
-section.hero .bottom > .coupon:last-child > div {
-    font-size: 1.5rem;
-}
-section.hero .bottom > .coupon:first-child > div:last-child > span,
-section.hero .bottom > .coupon:last-child > div:last-child {
-    color: #F25B92;
-}
-section.offer .content {
-    padding: 3em 3rem 2rem 3rem;
-    display: flex;
-    position: relative;
-    overflow: hidden;
-    background-image: url("../assets/images/apply-star.png"), url("../assets/images/apply-star.png"), url("../assets/images/pink-star.svg");
-    background-repeat: no-repeat;
-    background-size: 20rem 20rem, 16rem 20rem, 9rem 9rem;
-    background-position: 50% 100%, calc(100% + 11.5rem) 0, calc(100% + 1rem) calc(50% + 5rem);
-}
-section.offer .content > .abs {
-    position: absolute;
-    width: 15rem;
-    height: 6.5rem;
-    left: -4.5rem;
-    bottom: 1rem;
-    transform: rotate(20deg);
-}
-section.offer .content > div {
-    width: 50%;
-}
-section.offer .content > .right {
-    display: flex;
-    flex-direction: column;
-    gap: 0;
-    align-items: center;
-}
-section.offer .content > .right > img {
-    width: 90%;
-}
-section.offer > .content > .left {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-}
-section.offer .left .tooltip {
-    font-size: 1.5rem;
-    padding: .5rem 1rem;
-    background: #F25B92;
-    border-radius: 4rem;
-    width: fit-content;
-}
-section.offer .left .title {
-    font-size: 3.5rem;
-}
-section.offer .left .info {
-    padding: 1.25rem;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    width: fit-content;
-    border: 2px solid #F25B92;
-    border-radius: 1rem;
-    background: rgba(242, 91, 146, 0.08);
-}
-section.offer .left .info > div {
-    display: flex;
-    gap: 1rem;
-    align-items: center;
-}
-section.offer .left .info > div .plus {
-    font-size: 1rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    height: fit-content;
-    padding: .1rem .3rem;
-    background: #F25B92;
-    color: #FFFFFF;
-}
-section.offer .left .info > div .text {
-    font-size: 1.2rem;
-}
-
-
-.form-wrapper form {
-    width: 100%;
+main .content {
     display: flex;
     flex-direction: column;
     gap: 2rem;
-    margin-top: -10px;
+    width: fit-content;
+}
+main .title {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+main .title > div {
+    font-family: 'Basenji ExtraLight', sans-serif;
+    font-size: 2.25rem;
+    text-align: center;
+    text-transform: uppercase;
+}
+.form-wrapper form {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
 }
 .form-wrapper .form-inner {
     background-color: #EBEBEB;
-    padding: 2rem 2rem 1.25rem 2rem;
-    border: 2px solid #F25B92;
+    padding: 2rem 2rem 1rem 2rem;
     min-width: 40vw;
     max-width: 600px;
     font-family: sans-serif;
-    border-radius: 1.25rem;
 }
 
 .custom-form label {
@@ -214,7 +96,6 @@ section.offer .left .info > div .text {
     background-color: #FAFAFA;
     font-size: 1rem;
     box-sizing: border-box;
-    border-radius: 2rem;
 }
 .button{
     cursor: pointer;
@@ -376,241 +257,110 @@ section.offer .left .info > div .text {
     }
 }
 
-@media screen and (min-width: 2560px) and (max-width: 3840px) {
+@media screen and (min-width: 1921px) and (max-width: 3840px) {
     html {
-        font-size: 35px;
+        font-size: 28px;
     }
-    section.hero {
-        min-height: auto;
-        padding: 0 20rem 5rem 20rem;
-        max-height: 1300px !important;
-    }
-    section.hero .title {
-        font-size: calc(90vw / 8);
-        margin-bottom: calc(45vw / 4.4);
-    }
-    section.hero .title .abs {
-        width: 40vw;
-        left: 50%;
-    }
-    section.hero .top > div:last-child {
-        justify-content: center;
-    }
-    section.offer .content {
-        padding: 5rem 20rem 5rem 20rem;
-    }
-    .form-wrapper .form-inner {
-        min-width: 800px;
-        padding: 3rem 3rem 2rem 3rem;
-    }
-    section.offer .left .tooltip {
-        font-size: 2rem;
-        padding: 1rem 1.5rem;
-    }
-    section.offer .left .title {
-        font-size: 4.5rem;
-    }
-    section.offer .left .info {
-        padding: 1.75rem;
-    }
-    .button {
-        width: 20vw;
-    }
-    .custom-form label {
-        font-size: 1.25rem;
-    }
-}
-@media screen and (min-width: 1920px) and (max-width: 2560px) {
-    html {
-        font-size: 26px;
-    }
-    section.hero {
-        min-height: auto;
-    }
-    section.hero .bottom {
-        padding-top: 8rem;
-    }
-    section.hero .bottom > .coupon {
-        padding: 2.5rem 1rem;
-        min-width: 27%;
-    }
-    section.hero .title {
-        font-size: calc(80vw / 8);
-        margin-bottom: calc(45vw / 4.4);
-    }
-    section.offer .content {
-        padding: 5rem 12rem 5rem 12rem;
-    }
-}
-@media only screen and (min-width: 1620px) and (max-width: 1919px) {
-    html {
-        font-size: 22px;
-    }
-    section.hero {
-        min-height: auto;
-    }
-    padding: 3em 7rem 2rem 7rem;
-}
-@media only screen and (min-width: 921px) and (max-width: 1200px) {
-    section.hero {
-        min-height: auto;
-    }
-    html {
-        font-size: 16px !important;
-    }
-}
-@media only screen and (max-width: 920px) {
-    html {
-        font-size: 12px !important;
-    }
-    section.hero {
-        min-height: auto !important;
-    }
-    section.hero .bottom > .coupon {
-        min-width: auto;
-    }
-}
-@media only screen and (max-width: 790px)  {
-    html {
-        font-size: 18px !important;
-    }
-    section.hero .bottom > .coupon {
-        width: 45%;
-    }
-    section.hero > .abs {
-        width: 20rem;
-        height: 10rem;
-        bottom: -4rem;
-        left: calc(100% + 12rem);
-    }
-    section.hero .title {
-        margin-top: 4rem;
-        font-size: calc(100vw / 7);
-        text-align: center;
-        position: relative;
-        margin-bottom: calc(60vw / 4.4);
-    }
-    section.hero .title .abs {
-        width: 60vw;
-    }
-    section.hero .top {
-        padding: .8rem 1rem;
-    }
-    section.hero .top > div:first-child {
-        justify-content: flex-end;
-        padding-right: 20px;
-    }
-    section.hero .top > div:last-child {
-        justify-content: flex-start;
-        padding-left: 20px;
-    }
-    section.hero > .top > div > div.text {
+    main {
         display: flex;
         flex-direction: column;
         justify-content: center;
+        padding-left: 7.5vw;
     }
-    section.hero > .top > div > div.text > div {
-        font-size: .8rem;
+    .custom-form input {
+        padding: 1rem .8rem;
     }
-    section.hero .top > div > .img {
-        width: 2.75rem;
-        height: 2.75rem;
+    .form-wrapper {
+        min-width: 35vw;
     }
-    section.offer .content {
-        flex-direction: column;
-        align-items: center;
+    main .title > div {
+        font-size: 3rem;
     }
-    section.offer .content > div > div {
-        margin: auto;
+}
+@media only screen  and (max-width: 2559px) {
+    html {
+        font-size: 24px;
     }
-    section.offer .content .title {
-        text-align: center;
+    main .title > div {
+        font-size: 2.5rem;
     }
-    section.offer .left .info br {
-        display: none;
+}
+@media only screen and (max-width: 1599px) {
+    html {
+        font-size: 20px;
     }
-    section.offer .content > div,
-    section.offer .left .info,
-    section.offer .content .form-wrapper,
-    .form-wrapper .form-inner,
-    section.offer .content > .right > img,
+}
+@media only screen and (max-width: 1365px) {
+    html {
+        font-size: 18px;
+    }
+    main {
+        padding: 3.5vw 0 2vw 5vw;
+    }
+    main {
+        padding: 3.5vw 0 2vw 10vw;
+        background-image: url('../assets/images/lips-rotated.svg'), url('../assets/images/pink-star.svg'), url('../assets/images/expert-bg-2.gif');
+        background-repeat: no-repeat;
+        background-position: -3% 10%, 104% -10%, 110% 105%;
+        background-attachment: fixed;
+        background-size: 17.5vw 17.5vw, 20vw 20vw, contain;
+    }
     .button {
+        width: 50%;
+    }
+}
+@media only screen and (max-width: 1100px) {
+    main {
+        display: flex;
+        justify-content: center;
+        padding: 5vw 20vw 2rem 20vw;
+        background-image: url('../assets/images/lips-rotated.svg'), url('../assets/images/pink-star.svg');
+        background-repeat: no-repeat;
+        background-position: -3% 10%, 104% -10%;
+        background-attachment: fixed;
+        background-size: 15vw 15vw, 20vw 20vw;
+    }
+    .mobile {
+        display: block;
         width: 100%;
-    }
-    section.offer .content .form-wrapper {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    .form-wrapper .form-inner {
-        min-width: auto;
-        max-width: 100%;
-    }
-    section.offer .content {
-        padding: 3rem 4rem 2rem 4rem;
+        margin-top: -5rem;
     }
 }
-@media only screen and (max-width: 620px) {
+@media only screen and (max-width: 777px) {
+    main {
+        padding: 4vw 15vw 2rem 15vw;
+        background-position: -5% 10%, 104% -10%;
+        background-size: 20vw 20vw, 25vw 25vw;
+    }
+    main .title > div {
+        font-size: 2.25rem;
+    }
+}
+@media only screen and (max-width: 600px) {
     html {
-        font-size: 15px !important;
+        font-size: 16px;
     }
-    section.offer .content {
-        padding: 3rem 3.75rem 2rem 3.75rem;
+    main {
+        padding: 4vw 10vw 2rem 10vw;
+        background-position: -5% 10%, 104% -5%;
     }
-    section.hero .title {
-        margin-top: 6rem;
-        font-size: calc(100vw / 4);
+    .button {
+        width: 70%;
     }
-    section.hero .title .abs {
-        width: 90%;
-        top: 71%;
-    }
-    section.hero .bottom {
-        padding-top: 8rem;
-    }
-    section.hero .bottom > .coupon {
-        padding: 1rem;
+    main .title > div {
+        font-size: 1.75rem;
     }
 }
-@media only screen and (max-width: 500px) {
-    html {
-        font-size: 12px !important;
-    }
-    section.offer .content {
-        padding: 3rem 2rem 2rem 2rem;
-    }
-    section.hero .bottom > .coupon:last-child > div,
-    section.hero .bottom > .coupon:first-child > div:last-child {
-        font-size: 1.25rem;
-    }
-}
-@media only screen and (max-width: 440px) {
-    section.hero .top {
-        border-bottom-left-radius: 1.8rem;
-        border-bottom-right-radius: 1.8rem;
-    }
-    section.hero .top > div:last-child {
-        padding-left: 5px;
-    }
-    section.hero .top > div:first-child {
-        padding-right: 5px;
-    }
-    section.hero {
-        background-size: 5rem 10rem, 3.75rem 15rem;
-        background-position: 0 100%, 100% 25%;
-    }
-    section.hero .top {
-        padding: .8rem .5rem;
+@media only screen and (max-width: 480px) {
+    main {
+        padding: 4vw 6vw 2rem 6vw;
     }
 }
 @media only screen and (max-width: 420px) {
-    section.offer .content {
-        padding: 3rem 1rem 2rem 1rem;
+    main {
+        padding: 10vw 4vw 1.5rem 4vw;
     }
-}
-@media only screen and (max-width: 385px) {
-    section.hero > .top > div > div.text > div {
-        font-size: .7rem;
-
+    .button {
+        width: 85%;
     }
 }
